--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -1,8 +1,12 @@
 name: Update Lines of Code in Readme
 
+# on:
+#   schedule:
+#     - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
 on:
-  schedule:
-    - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
+  push:
+    branches:
+      - main
   workflow_dispatch: # Allows manual trigger
 
 jobs:
@@ -25,7 +29,7 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
-          USERNAME="arhamkhnz"
+          USERNAME="GuyBernstein"
 
           # Get a list of public repositories that are not forks
           REPOS=$(curl -H "Authorization: token $GH_PAT" -s "https://api.github.com/user/repos?per_page=100" | jq -r '.[] | select(.fork == false) | .full_name') || echo "Error fetching repositories"
