--- a/.github/workflows/analyze-code.yml
+++ b/.github/workflows/analyze-code.yml
@@ -1,12 +1,8 @@
 name: Update Lines of Code in Readme
 
-# on:
-#   schedule:
-#     - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: "0 0 * * 0" # Runs weekly on Sunday at midnight (UTC)
   workflow_dispatch: # Allows manual trigger
 
 jobs:
